--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>QSpider</groupId>
   <artifactId>PracticeFramework</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>>0.0.1-SNAPSHOT</version>
   
   <properties> <maven.compiler.source>1.8</maven.compiler.source> 
   <maven.compiler.target>1.8</maven.compiler.target> 
@@ -103,7 +103,7 @@
    </build> 
   </profile>
   
-    <profile><id>regression</id>
+  <profile><id>regression</id>
   <build> 
   	<plugins> 
   	<plugin>
