--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
     <artifactId>testng</artifactId>
     <version>7.4.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+<dependency>
+   <groupId>org.slf4j</groupId>
+   <artifactId>slf4j-simple</artifactId>
+   <version>1.7.32</version>
+</dependency>
  
 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
